--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ notifications:
 deploy:
 - provider: script
   skip_cleanup: true
-  script: scripts/deploy.sh
+  script: bash scripts/deploy.sh
   on:
     all_branches: true
     condition: $TRAVIS_BRANCH =~ ^develop|beta|mater|emmental-test$
